cleaning up about page

--- a/about.html
+++ b/about.html
@@ -41,18 +41,60 @@
                         <span class="icon-bar"></span>
                     </button>
                 </div>
-                <div id="navbar" class="navbar-collapse collapse">
+
+
+
+ <div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#inSlider" data-slide-to="0" class="active"></li>
+        <li data-target="#inSlider" data-slide-to="1"></li>
+       <!-- <li data-target="#inSlider" data-slide-to="2"></li> -->
+   </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <div class="container">
+                <div class="carousel-caption">
+<!--                    <h1>Empowering the world...<br/><br/>
+                    <p>solving problems<br/>
+                        sharing ideas<br/><br/><br/>
+                    Collaboration backed with powerful tools and analytics</p> -->
+                   <!-- <p>
+                        <a class="btn btn-lg btn-primary" href="#" role="button">READ MORE</a>
+                          <a class="caption-link" href="#" role="button">Inspinia Theme</a> 
+                    </p> -->
+                </div>
+                <!-- <div class="carousel-image wow zoomIn">
+                    <img src="img/laptop.png" alt="laptop"/>
+                </div> -->
+            </div>
+            <!-- Set background for slide in css -->
+            <div class="header-back one"></div>
+
+        </div>
+        <div class="item">
+            <div class="container">
+                <div class="carousel-caption blank">
+                    <!-- <h1>Welcome to the bright ages...<br/></h1>
+                    <p>Where communities come together and improve the world.</p>
+                   <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
+                </div>
+            </div>
+            <!-- Set background for slide in css 
+            <div class="header-back two"></div> -->
+        </div>        
+        </div>
+    </div>
+</div>
+<!--                <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a class="page-scroll" href="index.html">Home</a></li>
                         <li><a class="page-scroll" href="about.html">About</a></li>
                         <li><a class="page-scroll" href="index.html#submit">Submit a Problem/Idea </a></li>
                         <li><a class="page-scroll" href="index.html#backlog">Development Backlog</a></li>
                         <li><a class="page-scroll" href="index.html#timeline">Launch Timeline</a></li>
-                        <!-- <li><a class="page-scroll" href="#testimonials">Testimonials</a></li>-->
-                        <!-- <li><a class="page-scroll" href="#pricing">Pricing</a></li>-->
                         <li><a class="page-scroll" href="index.html#contact">Contact</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </nav>
 </div>
