--- a/about.html
+++ b/about.html
@@ -35,15 +35,15 @@
  <div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#inSlider" data-slide-to="0" class="active"></li>
-        <li data-target="#inSlider" data-slide-to="1"></li>
+        <!--<li data-target="#inSlider" data-slide-to="1"></li> -->
        <!-- <li data-target="#inSlider" data-slide-to="2"></li> -->
    </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <div class="container">
                 <div class="carousel-caption">
-<!--                    <h1>Empowering the world...<br/><br/>
-                    <p>solving problems<br/>
+                    <h1>Welcome to Solve Spark!</h1>
+                    <!--<p>solving problems<br/>
                         sharing ideas<br/><br/><br/>
                     Collaboration backed with powerful tools and analytics</p> -->
                    <!-- <p>
@@ -59,17 +59,17 @@
             <div class="header-back one"></div>
 
         </div>
-        <div class="item">
+<!--        <div class="item">
             <div class="container">
                 <div class="carousel-caption blank">
-                    <!-- <h1>Welcome to the bright ages...<br/></h1>
+                     <h1>Welcome to the SolveSpark...<br/></h1>
                     <p>Where communities come together and improve the world.</p>
-                   <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
+                   <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> 
                 </div>
             </div>
             <!-- Set background for slide in css 
             <div class="header-back two"></div> -->
-        </div>        
+       <!-- </div>        -->
         </div>
     </div>
 
