--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@ SolveSpark will capture these precious day-to-day insights and give people a voi
 <li>No voice for the under-privileged</li>
 <li>Lack of transparency/accountability</li>
 <li>Wasting precious thought capital</li>
-< t engagement</li>
+<li> <i>Slackitivsm</i> is not engagement</li>
 <li>Unsound problem solving</li>
 <li>Little coordination between efforts</li>
 </ul>
