--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <!--<link rel="icon" href="img/favicon.ico">-->
 
 
-    <title>About SolveSpark</title>
+    <title>Welcome to SolveSpark</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,50 +44,25 @@
 </head>
 <body id="page-top">
 
-  
- <div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
- <!--   <ol class="carousel-indicators">
-        <li data-target="#inSlider" data-slide-to="0" class="active"></li>
-        <li data-target="#inSlider" data-slide-to="1"></li> 
-        <li data-target="#inSlider" data-slide-to="2"></li> 
-   </ol> -->
+</div>
+<div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <div class="container">
-                <div class="carousel-caption">
-                    <p><h1>Welcome to SolveSpark!</h1> </p>
-                    <!--<p>solving problems<br/>
-                        sharing ideas<br/><br/><br/>
-                    Collaboration backed with powerful tools and analytics</p> -->
-                   <!-- <p>
-                        <a class="btn btn-lg btn-primary" href="#" role="button">READ MORE</a>
-                          <a class="caption-link" href="#" role="button">Inspinia Theme</a> 
-                    </p> -->
+                <div class="carousel-caption blank">
+                    <h1>SolveSpark</h1>
+                    <h3>...together, we will <i>crowd-solve</i> the world's problems</h3>
+                    <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
                 </div>
-                <!-- <div class="carousel-image wow zoomIn">
-                    <img src="img/laptop.png" alt="laptop"/>
-                </div> -->
             </div>
             <!-- Set background for slide in css -->
-            <div class="header-back one"></div>
-
-        </div>
-<!--        <div class="item">
-            <div class="container">
-                <div class="carousel-caption blank">
-                     <h1>Welcome to the SolveSpark...<br/></h1>
-                    <p>Where communities come together and improve the world.</p>
-                   <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> 
-                </div>
-            </div>
-            <!-- Set background for slide in css 
-            <div class="header-back two"></div> -->
-       <!-- </div>        -->
+            <div class="header-back two"></div>
+        </div>        
         </div>
     </div>
+</div>
 
-
-<section id="submit" class="container services">
+<section id="page-top" class="container services">
     <div class="row">
         <div class="col-lg-12 text-center">
 <!--            <br><br><br><br> -->
