a few changes to the text

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@ SolveSpark will capture these precious day-to-day insights and give people a voi
 <div class="row">
 <h2>What was the inspiration behind SolveSpark?</h2>
 <p>
-  In 2011, I felt an air of discontent across America. It felt as if people had expected one person to magically fix the whole world. I, too, was upset-- upset at <i>America</i>.  "We need to fix our own problems in our own communities! Why can'tt people realize this?" I puzzled, while on my nightly walk. I felt so empowered by the problem-solving techniques I was learning in my Systems classes--how could I share this?  As soon as the lightbulb lit up, I could not let go of idea--the idea that would empower the world. Humanity is ready.
+  In 2011, I felt an air of discontent across America. It felt as if people had expected one person to magically fix the whole world. I, too, was upset-- upset at <i>America</i>.  "We need to fix our own problems in our own communities! Why can't people realize this?" I puzzled, while on my nightly walk. I felt so empowered by the problem-solving techniques I was learning in my Systems classes--how could I share this?  As soon as the lightbulb lit up, I could not let go of idea--the idea that would empower the world. Humanity is ready.
 </p>
 </div>
 
@@ -131,9 +131,9 @@ SolveSpark creates a centralized location for causes to raise awareness, encoura
 </div>
 
 <div class="row">
-<h2>What is your business plan?</h2>
+<h2>What is the business plan?</h2>
 <p>
-    SolveSpark will be publicly available for anyone to browse and post to the site. SolveSpark's primary source of income will be through paid monthly and yearly subscriptions for organizations. Organizations are encouraged to establish a profile page to raise awareness on their specific causes and missions, engage users, maximize efforts, and access a customized analytics and tools dashboard.
+SolveSpark will be publicly available for anyone to browse and post to the site. SolveSpark's primary source of income will be through paid monthly and yearly subscriptions for organizations. Organizations are encouraged to establish a profile page to raise awareness on their specific causes and missions, engage users, maximize efforts, and access a customized analytics and tools dashboard.
 </p><p>
 SolveSpark will likely offer a tiered pricing structure based on available features. Smaller organizations may be eligible for discounts to make their subscriptions more affordable. Trial subscriptions will be available to allow organizations to find the best option before committing to a plan.
 </p><p>
@@ -146,8 +146,6 @@ If these revenue streams prove insufficient, SolveSpark may sell ad space. The c
 <div class="row">
 <h2>Who are SolveSpark's competitors?  What is SolveSpark's competetive advantage?</h2>
 <p>
-    I believe that with my project management background, burning desire to save the world, and unique perspective, I can build a product that is different than what is already out there.
-</p><p>
 SolveSpark will challenge users to think critically before arriving at a solution. Many sites promote doing great things, but SolveSpark promotes doing great things responsibly by engaging all stakeholders, defining the problem, outlining requirements, assessing risks, and comparing top solutions.
 </p><p>
 It excites me greatly that there are a growing number of amazing sites geared towards growing ideas (such as ThinkItUp and IdeaScale), project management services (such as BaseCamp and Pivotal), and crowdfunding sites. Although these sites can be seen as competition, I choose to see them as inspiration, and even potential partners. SolveSpark will close a gap in the problem-solving process and complement existing services. Partnering with other services would potentially create force multipliers, advancing every cause. 
