--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="item active">
             <div class="container">
                 <div class="carousel-caption blank">
-                    <h1>...together, we will <i>crowd-solve</i> the world's ugliest problems</h1>
+                    <h1 style="margin:10px; text-align:center;">Together, we will <strong>crowd-solve</strong> the world's toughest problems</h1>
                     <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
                 </div>
             </div>
