--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <!--<link rel="icon" href="img/favicon.ico">-->
 
 
-    <title>Welcome to SolveSpark</title>
+    <title>SolveSpark - Let's crowdsolve it!</title>
+
+        <!-- Bootstrap core CSS -->
+    <link href="http://bootswatch.com/readable/bootstrap.css" rel="stylesheet">
+    <link href="http://bootswatch.com/assets/css/custom.min.css" rel="stylesheet">
+
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -49,7 +54,7 @@
           <ul class="nav navbar-nav">
             <li><a class="page-scroll" href="#page-top" style="color:#0d96c9;font:arial;font-weight:bold;font-size:30px;">SOLVESPARK</a></li>
             <li><a class="page-scroll" href="about.html">About</a></li>
-            <li><a class="page-scroll" href="#submit">Submit a Problem/Idea </a></li>
+            <li><a class="page-scroll" href="#submit">Demo</a></li>
             <li><a class="page-scroll" href="#backlog">Development Backlog</a></li>
             <li><a class="page-scroll" href="#timeline">3 Month Timeline</a></li>
             <li><a class="page-scroll" href="#contact">Contact</a></li>
@@ -65,7 +70,7 @@
         <div class="item active">
             <div class="container">
                 <div class="carousel-caption blank">
-                    <h1 style="margin:10px; text-align:center;">Together, we will <strong>crowd-solve</strong> the world's toughest problems</h1>
+                    <h2 style="margin:10px; text-align:center;">Together, we will <strong>crowd-solve</strong> the world's toughest problems</h2>
                     <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
                 </div>
             </div>
