--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
         <div class="item active">
             <div class="container">
                 <div class="carousel-caption">
-                    <h3 style="margin:10px; text-align:center;">Together, we will <strong>crowd-solve</strong> the world's <i>toughest</i> problems</h3>
+                    <div class="col-lg-12 text-center">
+                    <h2 style="margin:10px; text-align:center;">Together, we will <strong>crowd-solve</strong> the world's <i>toughest</i> problems</h2>
 
                     <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
+                </div>
                 </div>
             </div>
             <!-- Set background for slide in css -->
