--- a/index.html
+++ b/index.html
@@ -57,25 +57,22 @@
     </nav>
 
 
-<div class="col-lg-12 text-center">
 <div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <div class="container">
-<!--                <div class="carousel-caption"> -->
-                    <h1 style="margin:10px; text-align:center;">Together, we will <b>crowd-solve</b> the world's <i>toughest</i> problems</h1>
+                <div class="carousel-caption blank">
+                    <h1>Together, we will <b>crowd-solve</b> the world's <i>toughest</i> problems</h1>
 
                     <!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
-                
                 </div>
             </div>
             <!-- Set background for slide in css -->
             <div class="header-back two"></div>
-        </div>        
         </div>
     </div>
-
 </div>
+
 <section id="page-top" class="container services">
     <div class="row">
         <div class="col-lg-12 text-center">
