--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@ This path of continuous improvement and the challenge of always building a bigge
         </div> 
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-                <p><strong>&copy; 2015 Beebee Lee </strong><br/><!-- consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. --></p>
+                <p><strong>&copy; 2015 Beth Lee</strong><br/><!-- consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. --></p>
             </div>
         </div>
 
