--- a/index.html
+++ b/index.html
@@ -77,32 +77,48 @@
     <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <div class="navy-line"></div>
+<!--                    <div class="navy-line"></div> -->
                     <h1>SolveSpark is the world's first centralized "crowd-solving" platform</h1>
-                    <p>Inviting all people to post ideas, insights, and problems, in order to create traction and build positive change. </p>
+                    <p>Inviting all people to join in posting ideas, insights, and problems, in order to create traction and build positive change. </p>
+                    <p>Help create traction and positive change by joining in on the conversation!</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 features-text">
-                    <h2>Empowering All People</h2>
-                    <i class="fa fa-users big-icon pull-right"></i>
-                    <p>SolveSpark not only lets us hear the voices of those who are commonly underrepresented, but it also inspires a philosophy of positivity, transparency, and empowerment by showing people that together, we can solve the world's toughest challenges.</p>
+                    <h2>Empowerment for All</h2>
+                    <i class="fa fa-bolt big-icon pull-right"></i>
+                    <p>SolveSpark creates a place where everyone can come together share their thoughts and ideas with the world.   
+                        not only lets us hear the voices of those who are commonly underrepresented, but it also inspires a philosophy of 
+                        fresh perspectives
+                        creating a culture of transparency, and empowerment by showing people that together, we can solve the world's toughest challenges.</p>
                 </div>
                 <div class="col-lg-5 features-text">
-                    <h2>Robust Analytics</h2>
+                    <h2>Community</h2>
+                    <i class="fa fa-users big-icon pull-right"></i>
+                    <p>SolveSpark allows us to make popular social movements such as crowdfunding so much more effective by clarifying problems and allowing us to see the most effective solutions, making for better crowdfunding campaigns.</p>
+                </div>
+                <div class="col-lg-5 features-text">
+                    <h2>Robust Analytics/Clarity</h2>
                     <i class="fa fa-bar-chart big-icon pull-right"></i>
+                    <i class="fa fa-bar-eye big-icon pull-right"></i>
                     <p>SolveSpark gathers and analyzes the world's collection of daily insights, potentially yielding the power to fight cancer, mitigate climate change, and end hunger.</p>
+               <p> Robust analytics paired with tools to help us engage in critical thinking will help provide new insights that could help humanity fight cancer, mitigate climate change, and end hunger.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 features-text">
                     <h2>Transparency</h2>
-                    <i class="fa fa-bolt big-icon pull-right"></i>
+                    <i class="fa fa-sun-o big-icon pull-right"></i>
                     <p>The light that SolveSpark shines on solving the world's most complex problems creates transparency that gives the world the power to fight corruption.</p>
                 </div>
                 <div class="col-lg-5 features-text">
-                    <h2>Realization</h2>
-                    <i class="fa fa-clock-o big-icon pull-right"></i>
+                    <h2>Critical Thinking</h2>
+                    <i class="fa fa-rocket big-icon pull-right"></i>
+                    <p>SolveSpark allows us to make popular social movements such as crowdfunding so much more effective by clarifying problems and allowing us to see the most effective solutions, making for better crowdfunding campaigns.</p>
+                </div>
+                <div class="col-lg-5 features-text">
+                    <h2>Realization/Fruition</h2>
+                    <i class="fa fa-rocket big-icon pull-right"></i>
                     <p>SolveSpark allows us to make popular social movements such as crowdfunding so much more effective by clarifying problems and allowing us to see the most effective solutions, making for better crowdfunding campaigns.</p>
                 </div>
             </div>
@@ -296,9 +312,8 @@
             </div> -->
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <a href="mailto:Beth-Lee@SolveSpark.com" class="btn btn-primary">Send an E-mail</a>
                     <p class="m-t-sm">
-                        Or follow us on social media:  
+                        Follow us on social media:  
                     </p>
                     <ul class="list-inline social-icon">
                         <li><a href="#"><i class="fa fa-facebook"></i></a>
