--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-<!--                    <div class="navy-line"></div> -->
+                  <div class="navy-line"></div> 
                     <h1>SolveSpark is the world's first centralized "crowd-solving" platform</h1>
                     <p>Join in and share your ideas, insights, struggles, and dreams.  Your input will help create traction and build positive change in your community and around the world. </p>
                 </div>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-lg-5 features-text">
                     <h2>Best solutions</h2>
-                    <i class="fa fa-puzzle big-icon pull-right"></i>
+                    <i class="fa fa-puzzle-piece big-icon pull-right"></i>
                     <p>SolveSpark will help us craft the best solutions by comparing all of the alternatives and judging them based on criteria.  This will make for more effective crowdfunding campaigns.</p>
                 </div>
                 <div class="col-lg-5 features-text">
@@ -163,6 +163,7 @@
                             <span class="vertical-date"> Weeks 3 - 12<br/> <small></small> </span>
                         </div>
                     </div>
+                    <div class="vertical-timeline-block">
                         <div class="vertical-timeline-icon navy-bg">
                             <i class="fa fa-star"></i>
                         </div>
@@ -172,6 +173,7 @@
                             </p>
                             <a href="#" class="btn btn-xs btn-primary"> More info</a>
                             <span class="vertical-date">Weeks 3 - 7<br/> <small>Sunday, May 29th</small> </span>
+                        </div>
                         </div>
                     
                     <div class="vertical-timeline-block">
@@ -209,7 +211,6 @@
                     <address>
                         <strong><span class="navy">Beth Lee</span></strong><br/>
                         <a href="mailto:beth-lee@solvespark.com">beth-lee@solvespark.com</a>
-                        
                     </address>
 
                 </div> </div></div>
@@ -233,7 +234,7 @@
             </div> 
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-                    <p><strong>&copy; 2016 Beth Lee </strong><br/></p>
+                    <p>&copy; 2016 Beth Lee <br/></p>
                 </div>
             </div>
 
