--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="carousel-caption blank">
                         <h2>Together, we will <b>crowd-solve</b> the world's <i>toughest</i> problems</h2>
 
-                        <p><a class="btn btn-lg btn-default" href="#about" role="button">Learn more</a></p>
+                        <p><a class="btn btn-lg btn-outline" href="#about" role="button">Learn more</a></p>
                     </div>
                 </div>
                 <!-- Set background for slide in css -->
@@ -106,7 +106,7 @@
                 <!--<div class="col-lg-5 col-lg-offset-1 features-text">-->
                 <div class="col-lg-12 features-text">
                     <h2>Transparency</h2>
-                    <i class="fa fa-sun-o big-icon pull-right"></i>
+                    <i class="fa fa-sun-o big-icon pull-left"></i>
                     <p>Making facts, figures, and collaboration available to the world will bring legitimacy to the problem-solving process.  Showing the world how things should be versus how they really are has the power to fight corruption.</p>
                 </div>
                <!-- <div class="col-lg-5 features-text">-->
@@ -118,7 +118,7 @@
                 <!--<div class="col-lg-5 features-text">-->
                 <div class="col-lg-12 features-text">
                     <h2>Best solutions</h2>
-                    <i class="fa fa-puzzle-piece big-icon pull-right"></i>
+                    <i class="fa fa-puzzle-piece big-icon pull-left"></i>
                     <p>SolveSpark will help us craft the best solutions by comparing all of the alternatives and judging them based on criteria.  This will make for more effective crowdfunding campaigns.</p>
                 </div>
                 <!--<div class="col-lg-5 features-text">-->
@@ -152,7 +152,7 @@
                           <h2>Landing Page</h2>
                             <p>Create a landing page to clearly communicate what SolveSpark is all about.
                             </p>
-                            <a href="#" class="btn btn-xs btn-primary"> More info</a>
+                          <!--  <a href="#" class="btn btn-xs btn-primary"> More info</a>-->
                             <span class="vertical-date">Weeks 1 - 2 <br/> <small>Sunday, May 1st</small> </span>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                         <div class="vertical-timeline-content">
                             <h2>Outreach</h2>
                             <p>Reach out to potential interested parties and establish key relationships</p>
-                            <a href="#" class="btn btn-xs btn-primary"> More info</a>
+                            <!--<a href="#" class="btn btn-xs btn-primary"> More info</a>-->
                             <span class="vertical-date"> Weeks 3 - 12<br/> <small></small> </span>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                             <h2>Prototype</h2>
                             <p>Complete the prototype that would allow users to log in, submit information, receive alerts, and view basic analytics.
                             </p>
-                            <a href="#" class="btn btn-xs btn-primary"> More info</a>
+                            <!--<a href="#" class="btn btn-xs btn-primary"> More info</a>-->
                             <span class="vertical-date">Weeks 3 - 7<br/> <small>Sunday, May 29th</small> </span>
                         </div>
                         </div>
@@ -192,7 +192,7 @@
                             <h2>Solicit Feedback</h2>
                             <p>Deploy website to a small group of users to begin populating database and gathering feedback to drive requirements and continuous development.
                             </p>
-                            <a href="#" class="btn btn-xs btn-primary"> More info</a>
+                            <!--<a href="#" class="btn btn-xs btn-primary"> More info</a>-->
                             <span class="vertical-date">Weeks 7 - 12<br/> <small>Sunday, July 3rd</small> </span>
                         </div>
                     </div>
