--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
               <ul class="nav navbar-nav">
                 <li><a class="page-scroll" href="#page-top" style="color:#0d96c9;font:arial;font-weight:bold;font-size:30px;">SOLVESPARK</a></li>
                 <li><a class="page-scroll" href="about.html">Vision</a></li>
-                <li><a class="page-scroll" href="#submit">Demo</a></li>
-                <li><a class="page-scroll" href="#backlog">Development Backlog</a></li>
+                <li><a class="page-scroll" href="#demo.html">Demo</a></li>
                 <li><a class="page-scroll" href="#timeline">3 Month Timeline</a></li>
                 <li><a class="page-scroll" href="#contact">Contact</a></li>
               </ul>
@@ -64,7 +63,7 @@
                     <div class="carousel-caption blank">
                         <h2>Together, we will <b>crowd-solve</b> the world's <i>toughest</i> problems</h2>
 
-                        <p><a class="btn btn-lg btn-outline" href="#about" role="button">Learn more</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="#about" role="button">Learn more</a></p>
                     </div>
                 </div>
                 <!-- Set background for slide in css -->
@@ -73,7 +72,7 @@
         </div>
     </div>
 
-<section id="page-top" class="container services">
+<section id="about" class="container services">
     <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -91,8 +90,8 @@
                 </div>
                 <!--<div class="col-lg-5 col-lg-offset-1 features-text">-->
                 <div class="col-lg-12 features-text">
-                    <h2>Empowerment</h2>
                     <i class="fa fa-bolt big-icon pull-left"></i>
+                    <h2>Empowerment</h2>
                     <p>SolveSpark seeks the voices of the entire world, so that together, we can confront world's toughest challenges.  We are challenging the status quo by giving everyone, not only the privileged, a platform to carve out a better future.  Every human has an unbelievable amount of potential.  Let's not let it go to waste.</p>
                 </div>
                 <!--<div class="col-lg-5 features-text">-->
