redirecting to index.php and fixed demo formatting

--- a/demo.html
+++ b/demo.html
@@ -75,30 +75,22 @@
 <section id="main" class="container services">
     <div class="row">
         <div class="col-lg-12 text-center">
-<h1>
-<a href="https://vast-oasis-7387.herokuapp.com/ProblemSubmit.html">Submit a problem</a>
-</h1>
-<h1>
-<a href="https://vast-oasis-7387.herokuapp.com/IdeaSubmit.html">Submit an idea</a> 
-</h1>
-</div>
-</div>
 
 <div class="row">
 <h1>Our demo is not quite ready for show, yet!  Please surf our Problem and Idea databases!</h1>
 <p>
 <ul>
-<h2><li><a href="https://vast-oasis-7387.herokuapp.com/ProblemFeed.php">Problem Feed</a></li></h2>
-<h2><li><a href="https://vast-oasis-7387.herokuapp.com/IdeaFeed.php">Idea Feed</a></li></h2>
+<h2><a href="https://vast-oasis-7387.herokuapp.com/ProblemFeed.php">Problem Feed</a></h2>
+<h2><a href="https://vast-oasis-7387.herokuapp.com/IdeaFeed.php">Idea Feed</a></h2>
 
 <h1>...and feel free to submit your own entries!</h1>
 
 <h2><a href="https://vast-oasis-7387.herokuapp.com/ProblemSubmit.html">Submit a problem</a></h2>
 <h2><a href="https://vast-oasis-7387.herokuapp.com/IdeaSubmit.html">Submit an idea</a></h2>
 
-<li><a href="https://vast-oasis-7387.herokuapp.com/ProblemView.php">Problem View (conceptual, with dummy-data)</a></li> 
-<!--<li><a href="https://vast-oasis-7387.herokuapp.com/implementation.html">Implementation</a></li>
-<li><a href="https://vast-oasis-7387.herokuapp.com/solution.html">Solution</a></li>-->
+<h2><a href="https://vast-oasis-7387.herokuapp.com/ProblemView.php">Problem View (conceptual, with dummy-data)</a><h2>
+<!--<a href="https://vast-oasis-7387.herokuapp.com/implementation.html">Implementation</a>
+<a href="https://vast-oasis-7387.herokuapp.com/solution.html">Solution</a>-->
 </ul>
 </p>
 </div>
