--- a/demo.html
+++ b/demo.html
@@ -74,21 +74,21 @@
  
 <section id="main" class="container services">
     <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12 text-left">
 
 <div class="row">
-<h1>Our demo is not quite ready for show, yet!  Please surf our Problem and Idea databases!</h1>
+<h1 style="text-align:left;">Our demo is not quite ready for show, yet!  Please surf our Problem and Idea databases!</h1>
 <p>
 <ul>
-<h2><a href="https://vast-oasis-7387.herokuapp.com/ProblemFeed.php">Problem Feed</a></h2>
-<h2><a href="https://vast-oasis-7387.herokuapp.com/IdeaFeed.php">Idea Feed</a></h2>
+<h2 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemFeed.php">Problem Feed</a></h2>
+<h2 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/IdeaFeed.php">Idea Feed</a></h2>
 
-<h1>...and feel free to submit your own entries!</h1>
+<h1 style="text-align:left;">...and feel free to submit your own entries!</h1>
 
-<h2><a href="https://vast-oasis-7387.herokuapp.com/ProblemSubmit.html">Submit a problem</a></h2>
-<h2><a href="https://vast-oasis-7387.herokuapp.com/IdeaSubmit.html">Submit an idea</a></h2>
+<h2 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemSubmit.html">Submit a problem</a></h2>
+<h2 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/IdeaSubmit.html">Submit an idea</a></h2>
 
-<h2><a href="https://vast-oasis-7387.herokuapp.com/ProblemView.php">Problem View (conceptual, with dummy-data)</a><h2>
+<h2 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemView.php">Problem View (conceptual, with dummy-data)</a><h2>
 <!--<a href="https://vast-oasis-7387.herokuapp.com/implementation.html">Implementation</a>
 <a href="https://vast-oasis-7387.herokuapp.com/solution.html">Solution</a>-->
 </ul>
