--- a/demo.html
+++ b/demo.html
@@ -87,7 +87,9 @@
 
 <h3 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemSubmit.html">Submit a problem</a></h3>
 <h3 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/IdeaSubmit.html">Submit an idea</a></h3>
+<br><br><br>
 
+<h2 style="text-align:left;">Other pages </h2> 
 <h3 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemView.php">Problem View (conceptual, with dummy-data)</a><h3>
 <!--<a href="https://vast-oasis-7387.herokuapp.com/implementation.html">Implementation</a>
 <a href="https://vast-oasis-7387.herokuapp.com/solution.html">Solution</a>-->
