--- a/demo.html
+++ b/demo.html
@@ -77,7 +77,8 @@
         <div class="col-lg-12 text-left">
 
 <div class="row">
-<h2 style="text-align:left;">Our demo is not quite ready for show, yet!  Please surf our Problem and Idea databases!</h2>
+<h2 style="text-align:left;">Our demo is not quite ready for show, yet!</h2>
+<h2 style="text-align:left;">Please feel free to surf our Problem and Idea databases!</h2>
 <p>
 <ul>
 <h3 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemFeed.php">Problem Feed</a></h3>
