--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@ SolveSpark will capture these precious day-to-day insights and give people a voi
 <div class="row">
 <h2>What was the inspiration behind SolveSpark?</h2>
 <p>
-  In 2011, I felt an air of discontent across America. It felt as if people had expected one person to magically fix the whole world. I, too, was upset-- upset at <i>America</i>.  "We need to fix our own problems in our own communities! Why can't people realize this?" I puzzled, while on my nightly walk. I felt so empowered by the problem-solving techniques I was learning in my Systems classes--how could I share this?  As soon as the lightbulb lit up, I could not let go of idea--the idea that would empower the world. Humanity is ready.
+  In 2011, I felt an air of discontent across America. It felt as if people had expected one person to magically fix the whole world. I, too, was upset-- upset at <i>America</i>.  "We need to fix our own problems in our own communities! Why can't people realize this?" I puzzled, while on my nightly walk. I felt so empowered by the problem-solving techniques I was learning in my Systems Engineering classes--how could I share this?  As soon as the lightbulb lit up, I could not let go of idea--the idea that would empower the world. Humanity is ready.
 </p>
 </div>
 
