changed timeline icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--<link rel="icon" href="img/favicon.ico">-->
 
 
-        <title>SolveSpark - Let's crowd-solve it all!</title>
+        <title>SolveSpark - Let's crowd-solve it together!</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -158,7 +158,7 @@
 
                     <div class="vertical-timeline-block">
                         <div class="vertical-timeline-icon navy-bg">
-                            <i class="fa fa-phone"></i>
+                            <i class="fa fa-star"></i>
                         </div>
 
                         <div class="vertical-timeline-content">
